// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > generates a path-param command with a scalar JSON body 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setOfficial
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsSetOfficialCommand = defineApiCommand({
  name: "set-official",
  description: "Mark a bot as official.",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    official: S.Boolean(),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-official",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "official": params.official,
      },
    });
  },
});
",
    "path": "bots/set-official.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetOfficialCommand } from "./bots/set-official.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetOfficialCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > generates a scalar query command 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: listBots
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsListCommand = defineApiCommand({
  name: "list",
  description: "List bots.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    owner: S.Optional(S.String()),
    limit: S.Optional(S.Number({ default: 50, jsonType: "integer" })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots",
      method: "GET",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      query: {
        "owner": params.owner,
        "limit": params.limit,
      },
    });
  },
});
",
    "path": "bots/list.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsListCommand } from "./bots/list.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsListCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > generates an enum JSON body command 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setImageComprehension
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsSetImageComprehensionCommand = defineApiCommand({
  name: "set-image-comprehension",
  description: "Set image comprehension mode.",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    mode: S.Enum(["off","auto","forced"] as const),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-image-comprehension",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "mode": params.mode,
      },
    });
  },
});
",
    "path": "bots/set-image-comprehension.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetImageComprehensionCommand } from "./bots/set-image-comprehension.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetImageComprehensionCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > generates array body params with a repeatable CLI flag, a JSON variant, and MCP array fidelity 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setConversationStarters
 */
import { S, UserError } from "toolcraft";
import { requestJson, defineApiCommand, validateArrayJsonHelperValue } from "toolcraft-openapi";

export const botsSetConversationStartersCommand = defineApiCommand({
  name: "set-conversation-starters",
  description: "Set conversation starters.",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    starters: S.Optional(S.Array(S.String(), { maxItems: 4, requiredScopes: ["mcp", "sdk"] })),
    startersJson: S.Optional(S.String({ description: "JSON-encoded value for starters.", scope: ["cli"] })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    if (params.starters !== undefined && params.startersJson !== undefined) {
      throw new UserError("Options \\"--starters\\" and \\"--starters-json\\" are mutually exclusive.");
    }
    let resolvedStarters = params.starters;
    if (params.startersJson !== undefined) {
      let parsedJson: unknown;
      try {
        parsedJson = JSON.parse(params.startersJson);
      } catch (error) {
        throw new UserError("Invalid value for \\"--starters-json\\". Expected valid JSON.");
      }
      if (!Array.isArray(parsedJson)) {
        throw new UserError("Invalid value for \\"--starters-json\\". Expected a JSON array.");
      }
      validateArrayJsonHelperValue(parsedJson, {"kind":"array","itemDefinition":{"kind":"string"},"maxItems":4}, "startersJson");
      resolvedStarters = parsedJson;
    }
    if (resolvedStarters === undefined) {
      throw new UserError("Missing required parameter \\"starters\\".");
    }
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-conversation-starters",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "starters": resolvedStarters,
      },
    });
  },
});
",
    "path": "bots/set-conversation-starters.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetConversationStartersCommand } from "./bots/set-conversation-starters.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetConversationStartersCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > omits readOnly request-body fields from generated command params 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setProfile
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsSetProfileCommand = defineApiCommand({
  name: "set-profile",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    displayName: S.String(),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-profile",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "displayName": params.displayName,
      },
    });
  },
});
",
    "path": "bots/set-profile.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetProfileCommand } from "./bots/set-profile.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetProfileCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > preserves integer enums in the emitted MCP schema 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setStatusCode
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsSetStatusCodeCommand = defineApiCommand({
  name: "set-status-code",
  description: "Set a status code.",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    statusCode: S.Enum([1,2] as const, { jsonType: "integer" }),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-status-code",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      body: {
        "statusCode": params.statusCode,
      },
    });
  },
});
",
    "path": "bots/set-status-code.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetStatusCodeCommand } from "./bots/set-status-code.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetStatusCodeCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > treats required body fields as optional when the request body is optional 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: setDescription
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsSetDescriptionCommand = defineApiCommand({
  name: "set-description",
  scope: ["cli", "mcp", "sdk"] as const,
  positional: ["botHandle"],
  params: S.Object({
    botHandle: S.String(),
    description: S.Optional(S.String()),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-description",
      method: "POST",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "botHandle": params.botHandle,
      },
      ...(params.description === undefined
        ? {}
        : {
            body: {
              "description": params.description,
            },
          }),
    });
  },
});
",
    "path": "bots/set-description.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsSetDescriptionCommand } from "./bots/set-description.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetDescriptionCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;

exports[`generate > uses delete as the verb for delete-by-id operations 1`] = `
[
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 * operation-id: deleteBot
 */
import { S } from "toolcraft";
import { requestJson, defineApiCommand } from "toolcraft-openapi";

export const botsDeleteCommand = defineApiCommand({
  name: "delete",
  description: "Delete a bot.",
  scope: ["cli", "mcp", "sdk"] as const,
  confirm: true,
  positional: ["handle"],
  params: S.Object({
    handle: S.String(),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch, diagnostics }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{handle}",
      method: "DELETE",
      auth: "none",
      tokenSource,
      fetch,
      diagnostics,
      pathParams: {
        "handle": params.handle,
      },
    });
  },
});
",
    "path": "bots/delete.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineGroup } from "toolcraft";
import { botsDeleteCommand } from "./bots/delete.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsDeleteCommand],
});

export const generatedCommands = [bots] as const;
",
    "path": "index.ts",
  },
  {
    "contents": "/**
 * Generated by toolcraft-openapi.
 */
import { defineClient, type DefineClientOptions } from "toolcraft-openapi";
import { generatedCommands } from "./index.js";

export type GeneratedClientOptions = Omit<DefineClientOptions<object>, "commands">;

export function defineGeneratedClient(options: GeneratedClientOptions) {
  return defineClient<object>({
    ...options,
    commands: [...generatedCommands],
  });
}
",
    "path": "client.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { configureTheme, runCLI, type RunCLIOptions } from "toolcraft/cli";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedCLIOptions = GeneratedClientOptions &
  Omit<RunCLIOptions<OpenApiClientServices>, "services">;

export async function runGeneratedCLI(options: GeneratedCLIOptions) {
  const client = defineGeneratedClient(options);
  configureTheme({ brand: "blue", label: "Internal Agent API" });

  await runCLI(client.root, {
    ...options,
    services: client.services,
    controls: { output: true, verbose: true, ...options.controls },
  });
}
",
    "path": "cli.ts",
  },
  {
    "contents": "#!/usr/bin/env node
/**
 * Generated by toolcraft-openapi.
 */
import { runMCP, type RunMCPOptions } from "toolcraft/mcp";
import type { OpenApiClientServices } from "toolcraft-openapi";
import { defineGeneratedClient, type GeneratedClientOptions } from "./client.js";

export type GeneratedMCPOptions = GeneratedClientOptions &
  Omit<RunMCPOptions<OpenApiClientServices>, "name" | "services">;

export async function runGeneratedMCP(options: GeneratedMCPOptions) {
  const client = defineGeneratedClient(options);

  await runMCP(client.root, {
    ...options,
    name: client.name,
    services: client.services,
  });
}
",
    "path": "mcp.ts",
  },
]
`;
